<resources>
    <string name="tokenApiAndroid">eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1c2VySWQiOi0xLCJwZXJtaXNzaW9ucyI6ImFwaUNsaWVudCIsImlhdCI6MTUxMjI0NTExN30.M4qKvKNI6l7I1mzTf4EjQA274IeibK8qRMSIYa8NvI8</string>
    <string name="app_name">Czy dobiegnę ?</string>
    <string name="permissions_button">Uprawnienia</string>
    <string name="permission">Musisz zakceptować uprawnienia\n jeśli chesz korzystać z aplikacji</string>
    <string name="back_pres">Aby wyjść z aplikacji, kliknij przycisk WSTECZ dwukrotnie</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="no_data_label_default">No data</string>
    <bool name="canUseLandscapeMode">false</bool>
    <string name="distance">Dystans :</string>
    <string name="time">Czas :</string>

    <!--Menu-->
    <string name="map">Mapa</string>
    <string name="user">Użytkownik</string>
    <!--Menu-->
<string name="sign_in">Logowanie</string>
    <string name="regisetr">Rejestracja</string>
    <string name="edit">Edycja</string>

    <string name="disconnect">dissconnect</string>
    <string name="connect">connect</string>

    <string name="login_button">Zaloguj</string>
    <string name="add_localization_button">Dodaj lokalizację</string>
    <string name="login_hint">login</string>
    <string name="login_ime_action">Zaloguj</string>
    <string name="password_hint">Hasło</string>
    <string name="email_hint">Email</string>
    <string name="password_hint_again">Powtórz hasło</string>
    <string name="login_error_login_input">Błędny email</string>
    <string name="login_correct">Udało się zalogować</string>
    <string name="login_uncorrect">Nie udało się zalogować</string>
    <string name="register_correct">Udało się zarejestrować</string>
    <string name="register_uncorrect">Nie udało się zarejestrować</string>
    <string name="edit_correct">Dane zmienione</string>
    <string name="edit_const">Dane nie mogą zostać zmienione \n Zmień chociaż jedą daną!!</string>
    <string name="edit_uncorrect">Nie udało zmienić danych</string>
    <string name="login_error_password_input">Podane hasła różnią się od siebie.</string>
    <string name="queryPosition">%1$s/api/query/locations?latitude=%2$s,%3$s&amp;longitude=%4$s,%5$s&amp;offset=%6$s&amp;fields=*</string>
    <string name="signin">%1$s/api/auth</string>
    <string name="user_action">%1$s/api/user</string>
    <string name="localization">%1$s/api/location</string>
    <string name="GoooleDistance">http://maps.googleapis.com/maps/api/directions/json?origin=%1$s,%2$s&amp;destination=%3$s,%4$s&amp;sensor=false&amp;mode=walking</string>
    <integer name="timeout_short" translatable="false">2000</integer>
    <integer name="timeout_medium" translatable="false">10000</integer>

    <string name="popup_account_login_label">Login : </string>
    <string name="popup_account_connected_info">Jesteś obecnie zalogowany</string>
    <string name="popup_account_disconnected_btn">Zaloguj</string>
    <string name="popup_account_disconnected_info">Zaloguj się do aplikacji.</string>
    <string name="popup_account_connected_btn">Wyloguj</string>

    <string name="toast_add_localization">Zaloguj się by dodać lokalizację</string>
</resources>
