<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginTop="?attr/actionBarSize"
        android:background="@color/colorbackground"
        android:elevation="6dp"
        android:orientation="vertical"
        android:paddingTop="10dp"
        app:elevation="6dp">

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            style="@style/VBStyle"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/popup_account_login_label"/>

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:id="@+id/popup_account_login"
            style="@style/VBStyle"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"/>

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            style="@style/VBStyle"
            android:layout_marginTop="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/popup_account_connected_info"/>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/popup_account_action"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:drawablePadding="10dp"
            android:drawableRight="@drawable/ma_disconnect"
            android:gravity="right|center_vertical"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:text="@string/popup_account_connected_btn"/>

    </LinearLayout>
</FrameLayout>
